Fix layout issues with install button

--- a/src/amo/components/InstallButtonWrapper/styles.scss
+++ b/src/amo/components/InstallButtonWrapper/styles.scss
@@ -9,7 +9,7 @@
 }
 
 .InstallButtonWrapper-downloadLink {
-  margin-top: 12px;
+  margin: 12px auto;
 
   a,
   a:link {
